# chatd

./: README.md
chatd/: Cargo.toml  agent.motd  client.motd  guest.motd
chatd/src/: auth.rs  ban.rs  channel.rs  client.rs  commands.rs  config.rs  main.rs  message.rs  server.rs
public_html/: chat.css  chat.htm  chat.js
