[package]
name = "chatd"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.15"
tokio-rustls = "0.26"
rustls = "0.23"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
# rusqlite = "0.32.1"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
async-trait = "0.1.83"
# console-subscriber = "0.4.1"
# tracing = "0.1"
# tracing-subscriber = "0.3"

[build]
# rustflags = ["--cfg", "tokio_unstable"]
